--- a/src/css/header.css
+++ b/src/css/header.css
@@ -25,6 +25,11 @@ header {
         height: 5rem;
         margin-left: 2rem;
       }
+      .electrocre {
+        width: 4rem;
+        height: 4rem;
+        margin-left: 2rem;
+      }
     }
 
     .nav--tab {
