--- a/src/views/actualizar_infraestructura.html
+++ b/src/views/actualizar_infraestructura.html
@@ -33,7 +33,7 @@
           <img
             src="../../public/images/logo_electrocre.png"
             align="center"
-            class="CRE"
+            class="electrocre"
           />
         </section>
       </nav>
