--- a/src/views/cuenta_suministrador.html
+++ b/src/views/cuenta_suministrador.html
@@ -7,7 +7,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/cuenta_suministrador_desktop.css" />
+    <link rel="stylesheet" href="../css/cuenta_suministrador_desktop.css" media="screen and (min-width: 769px)"/>
+    <link rel="stylesheet" href="../css/cuenta_suministrador_mobile.css" media="screen and (max-width: 768px)"/>
     <title>Cuenta Suministrador | ElectroCRE</title>
   </head>
   <body>
@@ -22,7 +23,7 @@
           <img
             src="../../public/images/logo_electrocre.png"
             align="center"
-            class="CRE"
+            class="electrocre"
           />
         </section>
       </nav>
