--- a/src/views/consulta.html
+++ b/src/views/consulta.html
@@ -35,7 +35,7 @@
           <img
             src="../../public/images/logo_electrocre.png"
             align="center"
-            class="CRE"
+            class="electrocre"
           />
         </section>
       </nav>
