--- a/src/views/solicitud_suministrador.html
+++ b/src/views/solicitud_suministrador.html
@@ -7,7 +7,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/registrar_infrestuctura_desktop.css" />
+    <link rel="stylesheet" href="../css/registrar_infrestuctura_desktop.css" media="screen and (min-width: 769px)"/>
+    <link rel="stylesheet" href="../css/registrar_infraestructura_mobile.css" media="screen and (max-width: 768px)"/>
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -33,7 +34,7 @@
           <img
             src="../../public/images/logo_electrocre.png"
             align="center"
-            class="CRE"
+            class="electrocre"
           />
         </section>
       </nav>
