--- a/src/views/cuenta_suministrador.html
+++ b/src/views/cuenta_suministrador.html
@@ -1,127 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../css/cuenta_suministrador_desktop.css" media="screen and (min-width: 769px)"/>
-    <link rel="stylesheet" href="../css/cuenta_suministrador_mobile.css" media="screen and (max-width: 768px)"/>
-    <title>Cuenta Suministrador | ElectroCRE</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <section class="nav--logos">
-          <img
-            src="https://framework-gb.cdn.gob.mx/landing/img/logofooter.png"
-            alt="center"
-            class="Mex"
-          />
-          <img
-            src="../../public/images/logo_electrocre.png"
-            align="center"
-            class="electrocre"
-          />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="../css/cuenta_suministrador_desktop.css" media="screen and (min-width: 769px)" />
+  <link rel="stylesheet" href="../css/cuenta_suministrador_mobile.css" media="screen and (max-width: 768px)" />
+  <title>Cuenta Suministrador | ElectroCRE</title>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <section class="nav--logos">
+        <img src="https://framework-gb.cdn.gob.mx/landing/img/logofooter.png" alt="center" class="Mex" />
+        <img src="../../public/images/logo_electrocre.png" align="center" class="electrocre" />
+      </section>
+    </nav>
+    <i></i>
+  </header>
+  <main>
+    <section class="informacion">
+      <section class="informacion__logo">
+        <img src="../../public/images/logo_electrocre.png" alt="" />
+        <span class="loader"></span>
+      </section>
+      <section class="informacion__personal">
+        <section class="informacion__personal--bienvenida">
+          <h1>Hola José Antonio,</h1>
+          <p>tu rol es Suministrador</p>
         </section>
-      </nav>
-      <i></i>
-    </header>
-    <main>
-      <section class="informacion">
-        <section class="informacion__logo">
-          <img src="../../public/images/logo_electrocre.png" alt="" />
-          <span class="loader"></span>
-        </section>
-        <section class="informacion__personal">
-          <section class="informacion__personal--bienvenida">
-            <h1>Hola José Antonio,</h1>
-            <p>tu rol es Suministrador</p>
+        <section class="informacion__personal--registro">
+          <section class="columnaUno">
+            <p class="columnaUno__label">Nombre(s)</p>
+            <p>José Antonio Medina Martínez</p>
+            <p class="columnaUno__label abajo">Razón Social</p>
+            <p>La Gasolinera SA CV</p>
           </section>
-          <section class="informacion__personal--registro">
-            <section class="columnaUno">
-              <p class="columnaUno__label">Nombre(s)</p>
-              <p>José Antonio Medina Martínez</p>
-              <p class="columnaUno__label abajo">Razón Social</p>
-              <p>La Gasolinera SA CV</p>
-            </section>
-            <section class="columnaUno">
-              <p class="columnaUno__label">Teléfono</p>
-              <p>5627722324</p>
-              <p class="columnaUno__label abajo">Correo Electronico</p>
-              <p>joseamm@comunidad.unam.mx</p>
-            </section>
+          <section class="columnaUno">
+            <p class="columnaUno__label">Teléfono</p>
+            <p>5627722324</p>
+            <p class="columnaUno__label abajo">Correo Electronico</p>
+            <p>joseamm@comunidad.unam.mx</p>
           </section>
         </section>
       </section>
-      <section class="tabla">
-        <section class="tabla__titulos"></section>
-        <section class="tabla__botones">
-          <section class="tabla__botones--filtro">
-            <p>Filtrar por:</p>
-            <select name="" id="filtrarAnual">
-              <option value="1" selected>2024</option>
-              <option value="2">2023</option>
-              <option value="3">2022</option>
-              <option value="4">2021</option>
-            </select>
-          </section>
-          <a href="./solicitud_suministrador.html">Registrar Solicitud</a>
+    </section>
+    <section class="tabla">
+      <section class="tabla__titulos"></section>
+      <section class="tabla__botones">
+        <section class="tabla__botones--filtro">
+          <p>Filtrar por:</p>
+          <select name="" id="filtrarAnual">
+            <option value="1" selected>2024</option>
+            <option value="2">2023</option>
+            <option value="3">2022</option>
+            <option value="4">2021</option>
+          </select>
         </section>
-        <section class="tabla__grid">
-          <table>
-            <thead>
-              <tr>
-                <th class="tabla__grid--inicio">Mes - Inicio</th>
-                <th class="tabla__grid--fin">Mes - Fin</th>
-                <th class="tabla__grid--rpu">RPU</th>
-                <th class="tabla__grid--latitud">Latitud</th>
-                <th class="tabla__grid--longitud">Longitud</th>
-              </tr>
-            </thead>
-            <tbody id="2023">
-              <tr>
-                <td class="tabla__grid--inicio">May/23</td>
-                <td class="tabla__grid--fin">Nov/23</td>
-                <td class="tabla__grid--rpu">12345678</td>
-                <td class="tabla__grid--latitud">20.783112681665266</td>
-                <td class="tabla__grid--longitud">-101.46017253379192</td>
-              </tr>
-              <tr>
-                <td class="tabla__grid--inicio">May/23</td>
-                <td class="tabla__grid--fin">Nov/23</td>
-                <td class="tabla__grid--rpu">12345678</td>
-                <td class="tabla__grid--latitud">20.783112681665266</td>
-                <td class="tabla__grid--longitud">-101.46017253379192</td>
-              </tr>
-              <tr>
-                <td class="tabla__grid--inicio">May/23</td>
-                <td class="tabla__grid--fin">Nov/23</td>
-                <td class="tabla__grid--rpu">12345678</td>
-                <td class="tabla__grid--latitud">20.783112681665266</td>
-                <td class="tabla__grid--longitud">-101.46017253379192</td>
-              </tr>
-              <tr>
-                <td class="tabla__grid--inicio">May/23</td>
-                <td class="tabla__grid--fin">Nov/23</td>
-                <td class="tabla__grid--rpu">12345678</td>
-                <td class="tabla__grid--latitud">20.783112681665266</td>
-                <td class="tabla__grid--longitud">-101.46017253379192</td>
-              </tr>
-              <tr>
-                <td class="tabla__grid--inicio">May/23</td>
-                <td class="tabla__grid--fin">Nov/23</td>
-                <td class="tabla__grid--rpu">12345678</td>
-                <td class="tabla__grid--latitud">20.783112681665266</td>
-                <td class="tabla__grid--longitud">-101.46017253379192</td>
-              </tr>
-            </tbody>
-          </table>
-        </section>
+        <a href="./solicitud_suministrador.html">Registrar Solicitud</a>
       </section>
-    </main>
-    <footer></footer>
-  </body>
+      <section class="tabla__grid">
+        <table>
+          <thead>
+            <tr>
+              <th class="tabla__grid--inicio">Mes - Inicio</th>
+              <th class="tabla__grid--fin">Mes - Fin</th>
+              <th class="tabla__grid--rpu">RPU</th>
+              <th class="tabla__grid--latitud">Latitud</th>
+              <th class="tabla__grid--longitud">Longitud</th>
+            </tr>
+          </thead>
+          <tbody id="2023">
+            <tr>
+              <td class="tabla__grid--inicio">May/23</td>
+              <td class="tabla__grid--fin">Nov/23</td>
+              <td class="tabla__grid--rpu">12345678</td>
+              <td class="tabla__grid--latitud">20.783112681665266</td>
+              <td class="tabla__grid--longitud">-101.46017253379192</td>
+            </tr>
+            <tr>
+              <td class="tabla__grid--inicio">May/23</td>
+              <td class="tabla__grid--fin">Nov/23</td>
+              <td class="tabla__grid--rpu">12345678</td>
+              <td class="tabla__grid--latitud">20.783112681665266</td>
+              <td class="tabla__grid--longitud">-101.46017253379192</td>
+            </tr>
+            <tr>
+              <td class="tabla__grid--inicio">May/23</td>
+              <td class="tabla__grid--fin">Nov/23</td>
+              <td class="tabla__grid--rpu">12345678</td>
+              <td class="tabla__grid--latitud">20.783112681665266</td>
+              <td class="tabla__grid--longitud">-101.46017253379192</td>
+            </tr>
+            <tr>
+              <td class="tabla__grid--inicio">May/23</td>
+              <td class="tabla__grid--fin">Nov/23</td>
+              <td class="tabla__grid--rpu">12345678</td>
+              <td class="tabla__grid--latitud">20.783112681665266</td>
+              <td class="tabla__grid--longitud">-101.46017253379192</td>
+            </tr>
+            <tr>
+              <td class="tabla__grid--inicio">May/23</td>
+              <td class="tabla__grid--fin">Nov/23</td>
+              <td class="tabla__grid--rpu">12345678</td>
+              <td class="tabla__grid--latitud">20.783112681665266</td>
+              <td class="tabla__grid--longitud">-101.46017253379192</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+    </section>
+  </main>
+  <footer></footer>
+</body>
+
 </html>
