--- a/src/views/consulta.html
+++ b/src/views/consulta.html
@@ -83,7 +83,7 @@
         </section>
 
         <section class="mapa__layout">
-          <section class="mapa__layout--grafico">
+          <section class="mapa__layout--grafico" id="mapa__layout--grafico">
             <div id="map"></div>
           </section>
           <section
