Update: Inicio de estructura de personal_cre.html

--- a/src/css/registrar_infraestructura_mobile.css
+++ b/src/css/registrar_infraestructura_mobile.css
@@ -306,6 +306,9 @@ main {
 
       button {
         display: flex;
+        align-content: center;
+        align-items: center;
+        height: 4.4rem;
         margin-top: 1rem;
         padding-bottom: 1rem;
         padding-top: 1rem;
