--- a/src/css/consulta_desktop.css
+++ b/src/css/consulta_desktop.css
@@ -236,8 +236,14 @@ main {
           .table__body{
             font-size: 1rem;
             font-weight: 600;
+            border: none;
+            margin: 0;
+            padding: 0;
             .table__body--conector {
               width: 10%;
+              border: none;
+              margin: 0;
+              padding: 0;
 
               img{
                 width: 2.2rem;
@@ -246,6 +252,9 @@ main {
   
             .table__body--nombre {
               width: 10%;
+              border: none;
+              margin: 0;
+              padding: 0;
             }
   
             .table__body--corriente {
